--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,1 +1,17 @@
+button {
+	font-size: var(--fs-3);
+	font-family: "AgencyFB";
+	height: 2.5rem;
+	padding: 0.25rem 2rem;
+	color: #fff;
+	background: transparent;
+	border-radius: 2.5rem;
+	border: 1px solid #fff;
+	cursor: pointer;
+	@include flex-center;
 
+	img {
+		max-height: 100%;
+		margin-right: 1rem;
+	}
+}
