--- a/scss/components/_identity.scss
+++ b/scss/components/_identity.scss
@@ -1,14 +1,13 @@
 .identity {
 	background: linear-gradient(135deg, #377138 0%, transparent 50%);
-	display: flex;
-	align-items: center;
+	@include flex($ai: center);
 	.level {
 		text-align: center;
 		@include size(100px);
 		@include flex-center(column);
 		border-radius: 50%;
 		border: 1px solid #fff;
-		margin: 0 40px 0 60px;
+		margin: 0 var(--spacer-lg);
 
 		font-family: "AgencyFB";
 		h3 {
