--- a/scss/components/_support-artist.scss
+++ b/scss/components/_support-artist.scss
@@ -1,13 +1,9 @@
 .support-artist {
-	border-radius: 8px;
-	border: 2px solid #485b5d;
+	--cl: #485b5d;
 	@include flex(column, $jc: space-between, $ai: flex-start);
-	padding: 40px;
-	position: relative;
-	.cash {
-		@include pos(absolute, $t: -1.25rem, $r: -1.25rem);
-		// transform: translate(-50%, -50%);
+	.img {
+		top: -1.25rem;
+		right: -1.25rem;
 		height: 120px;
-		filter: drop-shadow(0px 16px 16px rgba(0, 0, 0, 0.5));
 	}
 }
