--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -2,13 +2,15 @@
 	@include mq("sm") {
 		margin-left: 256px;
 	}
-	height: 840px;
+	height: calc(100vh - 2 * var(--spacer-sm));
+	min-height: 750px;
+	max-height: 1000px;
 
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(3, 1fr) 0.5fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+	grid-template-rows: repeat(3, 1fr) 0.4fr;
+	grid-column-gap: var(--spacer-sm);
+	grid-row-gap: var(--spacer-sm);
 }
 @include mq("xl") {
 	.identity {
@@ -26,20 +28,15 @@
 	.prices-clients {
 		grid-row: 2 / span 2;
 		grid-column: 1 / span 3;
-		background: transparent !important;
-
-		& > div {
-			background: pink;
-		}
 	}
 	.prices {
-		height: calc(40% - 20px);
-		margin-bottom: 20px;
+		height: calc(35% - var(--spacer-sm));
+		margin-bottom: var(--spacer-sm);
 	}
 	.clients {
-		height: 60%;
+		height: 65%;
 	}
-	.team {
+	.my-team {
 		grid-row: 2 / span 2;
 		grid-column: 4 / span 3;
 	}
@@ -51,7 +48,7 @@
 		grid-row: 3 / span 1;
 		grid-column: 7 / span 3;
 	}
-	.minecraft {
+	.minecraft-models {
 		grid-row: 2 / span 1;
 		grid-column: 10 / span 3;
 	}
@@ -66,5 +63,25 @@
 	.social {
 		grid-row: 4 / span 1;
 		grid-column: 5 / span 5;
+	}
+	.close-btn {
+		grid-row: 4 / span 1;
+		grid-column: 10 / span 3;
+		background: #000;
+	}
+	.prices-modal,
+	.digital-art-modal,
+	.pixel-art-modal,
+	.minecraft-models-modal {
+		grid-row: 1 / span 3;
+		grid-column: 1 / span 12;
+	}
+	.my-team-modal {
+		grid-row: 1 / span 3;
+		grid-column: 1 / span 9;
+	}
+	.apply-modal {
+		grid-row: 1 / span 3;
+		grid-column: 10 / span 3;
 	}
 }
