--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,8 +1,11 @@
 h1,
 h2,
-h3 {
-	font-weight: normal;
+h3,
+h4 {
+	font-weight: 400;
 	font-family: "Impact";
+	letter-spacing: 0.5px;
+	opacity: 0.9;
 }
 h1 {
 	font-size: var(--fs-1);
@@ -12,4 +15,7 @@ h2 {
 }
 h3 {
 	font-size: var(--fs-3);
+}
+h4 {
+	font-size: 1.125rem;
 }
