--- a/scss/components/_crown.scss
+++ b/scss/components/_crown.scss
@@ -7,7 +7,7 @@
 		.age {
 			font-family: "AgencyFB";
 			font-size: 1rem;
-			color: #50564d;
+			color: #8d928a;
 			margin-top: 0.25rem;
 		}
 	}
