--- a/scss/components/_pixel-art.scss
+++ b/scss/components/_pixel-art.scss
@@ -12,9 +12,10 @@
 		--cl: #bd6a7d;
 		background: linear-gradient(#7f5060 0%, transparent 75%);
 		.img {
-			top: -50px;
+			top: -70px;
 			right: -30px;
 			width: 150px;
+			transform: rotate(15deg);
 		}
 	}
 }
