--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -2,8 +2,8 @@
 	@include mq("sm") {
 		margin-left: 256px;
 	}
-	height: calc(100vh - 2 * var(--spacer-sm));
-	min-height: 750px;
+	height: calc(100vh - 2 * var(--spacer-md));
+	min-height: 600px;
 	max-height: 1000px;
 
 	display: grid;
@@ -30,11 +30,11 @@
 		grid-column: 1 / span 3;
 	}
 	.prices {
-		height: calc(35% - var(--spacer-sm));
+		height: calc(30% - var(--spacer-sm));
 		margin-bottom: var(--spacer-sm);
 	}
 	.clients {
-		height: 65%;
+		height: 70%;
 	}
 	.my-team {
 		grid-row: 2 / span 2;
@@ -56,11 +56,11 @@
 		grid-row: 3 / span 2;
 		grid-column: 10 / span 3;
 	}
-	.contact {
+	.contact-me {
 		grid-row: 4 / span 1;
 		grid-column: 1 / span 4;
 	}
-	.social {
+	.social-media {
 		grid-row: 4 / span 1;
 		grid-column: 5 / span 5;
 	}
@@ -82,6 +82,10 @@
 	}
 	.apply-modal {
 		grid-row: 1 / span 3;
+		grid-column: 10 / span 3;
+	}
+	.reviews-card {
+		grid-row: 2 / span 3;
 		grid-column: 10 / span 3;
 	}
 }
