--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,8 +19,12 @@
 @import "components/identity";
 @import "components/support-artist";
 @import "components/prices";
+@import "components/clients";
 @import "components/my-team";
 @import "components/digital-art";
 @import "components/pixel-art";
 @import "components/minecraft-models";
+@import "components/reviews";
+@import "components/contact-me";
+@import "components/social-media";
 @import "components/close-btn";
