--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -1,3 +1,12 @@
 .text-yellow {
 	color: $yellow;
 }
+.text-green {
+	color: #70d685;
+}
+.text-red {
+	color: #bc6a7d;
+}
+.flex-center {
+	@include flex-center;
+}
